k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: go-web-app
  template:
    metadata:
      labels: 
        app: go-web-app 
        
    spec:
      containers:
        - name: go-web-app
          image: abhishek070901/go-web-app:latest
          ports:
           - containerPort: 8080
